--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,3 @@
-# APP ID
-NEXT_PUBLIC_APP_ID=
-# APP API key
-NEXT_PUBLIC_APP_KEY=
-# API url prefix
-NEXT_PUBLIC_API_URL=
+NEXT_PUBLIC_APP_ID='a823c8a6-613f-41a2-ab80-4ed8b37f29c8' 
+NEXT_PUBLIC_APP_KEY='<Web API Key From Dify>' 
+NEXT_PUBLIC_API_URL='https://api.dify.ai/v1'
